# ANQuant

./: CopyFilesContentToWordDoc.py  README.md  build_and_run.ps1  dump.rdb  project_files_dump.docx  requirements.txt  test_multi_broker.py
config/: config.yaml  logging.yaml
config/secrets/india/: angelone_cred.yaml
config/strategies/: meanhunter_strategy.yaml
config/watchlists/India/: nifty50.yaml  nse200.yaml  nse500.yaml
config/watchlists/US/: nasdaq100.yaml  us_sp500.yaml
docs/: ANQuant Requirement Doc.docx  ANQuant.txt  Database (PostgreSQL).txt  FlexiRule Framework Documentation.docx  General.txt  Kafka.txt  Redis.txt
scripts/: context.txt  create_kafka_topics.py  prefetch_historical_data.py
src/anquant/: main.py
src/anquant/adapters/: angel_one.py  base_broker.py  broker_adapter.py
src/anquant/core/: anquant.py  factory.py  market_scheduler.py
src/anquant/data/: data_fetcher.py  script_master.py
src/anquant/feed/: market_feed_handler.py
src/anquant/indicators/: technical_indicators.py
src/anquant/logs/: anquant_structured_20250501.json
src/anquant/models/: signal.py
src/anquant/portfolio/: portfolio_manager.py
src/anquant/rs/indicator/: Cargo.toml
src/anquant/rs/indicator/src/: lib.rs
src/anquant/rs/market_data/: Cargo.toml
src/anquant/rs/market_data/src/: lib.rs
tests/: test_adapters.py  test_angelone.py  test_anquant.py  test_config_loader.py  test_create_kafka_topics.py  test_flexirule.py  test_initialization.py  test_kafka_client.py  test_main.py  test_market_data_engine.py  test_prefetch_historical_data.py
(+536 files in other folders)
