# D:\AlphaNivesh\ANQuant\src\rs\market_data\Cargo.toml
[package]
name = "market_data_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "market_data_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
pyo3-asyncio-0-21 = { version = "0.21.0", features = ["tokio-runtime"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }